Mejorado el icono